--- a/src/components/article-item/article-item.css
+++ b/src/components/article-item/article-item.css
@@ -6,12 +6,9 @@
   background: #ffffff;
   margin: 26px 10px;
   border: 1px solid #d9d9d9;
-  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07),
-    0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
-    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275),
-    0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
-    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725),
-    0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
+  box-shadow: 0px 22px 106px rgba(0, 0, 0, 0.07), 0px 9.19107px 44.2843px rgba(0, 0, 0, 0.0503198),
+    0px 4.91399px 23.6765px rgba(0, 0, 0, 0.0417275), 0px 2.75474px 13.2728px rgba(0, 0, 0, 0.035),
+    0px 1.46302px 7.04911px rgba(0, 0, 0, 0.0282725), 0px 0.608796px 2.93329px rgba(0, 0, 0, 0.0196802);
   border-radius: 6px;
 }
 .article__wrap {
@@ -29,7 +26,7 @@
 @media (max-width: 768px) {
   .article__body {
     margin-right: 10px;
-   width: auto;
+    width: auto;
   }
 }
 .article__title {
@@ -75,6 +72,7 @@
   flex-wrap: wrap;
   column-gap: 8px;
   row-gap: 5px;
+  margin: 0;
 }
 .article__tag-item {
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -92,6 +90,7 @@
   font-size: 12px;
   line-height: 22px;
   color: rgba(0, 0, 0, 0.75);
+  margin: 0;
 }
 .article__author-body {
   width: 17%;
@@ -106,8 +105,8 @@
   height: 50px;
 }
 @media (max-width: 768px) {
-  .article__author-body  {
-   width: auto;
+  .article__author-body {
+    width: auto;
   }
 }
 .article__author-data {
