--- a/src/components/pages/sign-in-page/sign-in-page.module.scss
+++ b/src/components/pages/sign-in-page/sign-in-page.module.scss
@@ -86,3 +86,16 @@ input[type="checkbox"] {
   line-height: 24px;
   margin-top: 21px;
 }
+.sign-in__transition-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: center;
+  color: #8c8c8c;
+  margin-top: 8px;
+}
+.sign-in__link {
+  color: #1890ff;
+}
